# GHG_2021

./: .gitignore  .pylintrc  LICENSE  README.md  pylint-out.txt  pyproject.toml
data/kml_bike_&_car_2018-2020/: sync_data_2018-05-31.kml  sync_data_2018-06-01.kml  sync_data_2018-06-04.kml  sync_data_2018-06-07.kml  sync_data_2018-06-19.kml  sync_data_2018-06-21.kml  sync_data_2018-06-28.kml  sync_data_2018-06-29.kml  sync_data_2018-07-06.kml  sync_data_2018-07-10.kml  sync_data_2018-07-13.kml  sync_data_2018-07-18.kml  sync_data_2018-07-20.kml  sync_data_2018-07-24.kml  sync_data_2018-07-27.kml  sync_data_2018-08-03.kml  sync_data_2018-08-09.kml  sync_data_2018-08-10.kml  sync_data_2018-08-15.kml  sync_data_2018-08-16_Truck.kml  sync_data_2018-08-17_Truck.kml  sync_data_2018-08-23.kml  sync_data_2018-08-28_Truck.kml  sync_data_2018-08-30_Truck.kml  sync_data_2018-09-05.kml  sync_data_2018-09-13.kml  sync_data_2018-09-27_Truck.kml  sync_data_2018-10-03_Truck.kml  sync_data_2018-10-05.kml  sync_data_2018-10-06_Truck.kml  sync_data_2018-10-12.kml  sync_data_2018-10-13_Truck.kml  sync_data_2018-10-16.kml  sync_data_2018-10-24.kml  sync_data_2018-10-26.kml  sync_data_2018-11-20_Truck.kml  sync_data_2018-11-22_Truck.kml  sync_data_2018-11-28_Truck.kml  sync_data_2018-11-29_Truck.kml  sync_data_2018-12-04_Truck.kml  (+61 more)
data/mobile_data_2018-2020/: sync_data_2018-07-18.csv  sync_data_2018-07-20.csv  sync_data_2018-07-24.csv  sync_data_2018-07-27.csv  (+21 more)
doc/: notes on sites of interest.txt  petrolia_reference_points.kml
src/: README_polyphemus_prep.md  README_wind_processing.md
(+388 files in other folders)
