[tool.poetry]
name = "ghg_2021"
version = "0.1.0"
description = ""
authors = ["sxu0 <sxu0726@gmail.com>"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.1"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
windrose = "^1.6.8"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
nbqa = "^1.2.3"
black = "^21.12b0"
pylint = "^2.12.2"
pylint-runner = "^0.6.0"
isort = "^5.10.1"
pre-commit = "^2.16.0"
pandoc = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
